letter spacing correction

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --s0-65: 0.65vw;
     --s0-7: 0.7vw;
     --s0-75: 0.75vw;
+    --s0-8: 0.8vw;
     --s0-9: 0.9vw;
     --s1: 1vw;
     --s1-2: 1.2vw;
@@ -207,7 +208,7 @@ a:visited {
     font-size: var(--s2-5);
     margin-bottom: var(--s-2-2);
     font-weight: 600;
-    letter-spacing: var(--s0-75);
+    letter-spacing: var(--s0-8);
     margin-right: var(--box-margin);
 }
 
